--- a/2_4_seaborn.qmd
+++ b/2_4_seaborn.qmd
@@ -96,6 +96,21 @@ plt.tight_layout(rect=[0, 0, 1, 0.99])
 plt.show()
 ```
 
+```{python}
+# 데이터 집계 :성별 흡연 상태별 평균 몸무게
+mean_weight = data6.groupby(['gender', 'smoking'])['weight'].mean()
+mean_weight = mean_weight.to_frame(name='mean')
+mean_weight = mean_weight.reset_index()
+mean_weight
+```
+
+```{python}
+# 막대 그래프 : 성별과 흡연 상태에 따른 평균 몸무게
+plt.figure(figsize=(5, 3))
+sns.barplot(x='gender', y='mean', hue='smoking', data=mean_weight)
+plt.show()
+```
+
 <br>
 
 ## 6.3. 히스토그램
@@ -114,12 +129,12 @@ femaledata = femaledata.loc[femaledata['gender']=='F',:]
 ```{python}
 # 히스토그램 : 성별에 따른 몸무게 분포
 plt.figure(figsize=(5, 3))
+plt.title('Distribution of Weight')
 sns.histplot(maledata['weight'], bins=8, alpha=0.5, label='Male')
 sns.histplot(femaledata['weight'], bins=8, alpha=0.5, label='Female', color='r')
 plt.xlim(20, 130)
-plt.xlabel('Weight')
-plt.ylabel('Count')
-plt.title('Distribution of Weight')
+plt.xlabel('weight')
+plt.ylabel('count')
 plt.legend()
 plt.show()
 ```
@@ -127,12 +142,12 @@ plt.show()
 ```{python}
 # 히스토그램 & 커널 밀도 추정(KDE) : 성별에 따른 허리둘레 분포
 plt.figure(figsize=(5, 3))
+plt.title('Distribution of Waist with KDE')
 sns.histplot(maledata['waist'], bins=7, alpha=0.5, label='Male', kde=True)
 sns.histplot(femaledata['waist'], bins=7, alpha=0.5, label='Female', color='r', kde=True)
 plt.xlim(40,130)
-plt.xlabel('Waist')
-plt.ylabel('Count')
-plt.title('Distribution of Waist with KDE')
+plt.xlabel('waist')
+plt.ylabel('count')
 plt.legend()
 plt.show()
 ```
@@ -147,15 +162,15 @@ plt.show()
 # 상자수염 그래프 : 성별 및 음주 여부에 따른 몸무게 분포
 plt.figure(figsize=(8, 4))
 plt.title('Weight By Gender and Drinking')
-sns.boxplot(x='drinking', y='weight', hue='gender', width=0.7, gap = 0.1, data=data6)
+sns.boxplot(x='gender', y='weight', hue='drinking', width=0.7, gap = 0.1, data=data6)
 plt.show()
 ```
 
 ```{python}
 # 상자수염 그래프 : 성별 및 흡연 상태에 따른 몸무게 분포
 plt.figure(figsize=(8, 6))
-plt.title('Weight By Gender and Drinking')
-sns.boxplot(x='weight', y='smoking', hue='gender', width=0.7, gap=0.1, data=data6, orient='h')
+plt.title('Weight By Gender and Smoking')
+sns.boxplot(x='weight', y='gender', hue='smoking', width=0.7, gap=0.1, data=data6, orient='h')
 plt.show()
 ```
 
@@ -170,6 +185,7 @@ plt.show()
 plt.figure(figsize=(5, 3))
 plt.title('Gender and Drinking')
 sns.countplot(x='drinking', hue='gender', data=data6)
+plt.xlabel('')
 plt.show()
 ```
 
@@ -180,6 +196,7 @@ plt.figure(figsize=(5, 3))
 plt.title('Gender and Smoking')
 sns.countplot(y='smoking', hue='gender',
               data=data6, order=['Smoking', 'Quit-smoking', 'Non-smoking'])
+plt.ylabel('')
 plt.show()
 ```
 
