--- a/3_2_regression.qmd
+++ b/3_2_regression.qmd
@@ -163,7 +163,7 @@ plt.show()
 + 행복지수와 GDP 간 관계는?
   + 상관계수는 2020년 0.78, 2021년 0.79로, 강한 양의 상관관계로 나타남
   + 경제 성장은 일반적으로 더 높은 소득과 향상된 생활 수준으로 이어지므로, 국민의 행복 수준도 높아지는 경향이 있음
-  + 따라서 국민의 행복을 보장하기 위해, 국가의 GDP는 주요 우선순위 중 하나로 고려될 필요가 있음
+  + 따라서 국민의 행복을 보장하기 위해, 국가의 GDP를 주요 우선순위로 고려할 필요가 있음
 
 <br>
 
@@ -208,7 +208,7 @@ plt.show()
 ##### **결과 및 시사점**
 + 행복지수와 사회적 지지 간 관계는?
   + 상관계수는 2020년 0.77, 2021년 0.76으로, 강한 양의 상관관계로 나타남
-  + 사회적 지지는 가족, 친구, 지인 등과 함께하는 관계에서 느끼는 정서적 지원에 대한 인식을 의미함
+  + 사회적 지지는 가족, 친구, 지인 등과 함께 있으면서 느끼는 정서적 지원에 대한 인식을 의미함
   + 일상 생활에서 가깝게 지내는 사람들과의 관계에서 형성되므로, 사회적 지지는 행복 수준에 중요한 요소임을 알 수 있음
 
 <br>
@@ -272,8 +272,9 @@ plt.show()
 <br>
 
 + 회귀모델 평가지표
+
 |지표|설명|
-|:---------|:------------------------------|
+|:---------:|:------------------------------|
 |MSE(Mean Squared Error)|- 평균제곱오차로, 작을수록 좋음|
 |RMSE(Root Mean Squared Error)|- MSE의 양의 제곱근으로, 작을수록 좋음<br> -단위가 데이터와 동일하여 해석이 용이함|
 |MAE(Mean Absolute Error)|- 평균절대오차로, 작을수록 좋음 <br>- 이상값에 덜 민감함|
@@ -290,7 +291,7 @@ plt.show()
     + $\beta_1$ : 기울기(slope)
     + $\epsilon$ : 오차(error)
   + 회귀분석의 목적은 주어진 데이터를 가장 잘 설명하는 회귀선을 찾는 것
-    + 일반적으로 오차의 제곱합을 최소화하는 최소제곱추정법(OLS; Ordinary Least Squares)을 사용함
+    + 일반적으로 오차의 제곱합을 최소화하는 최소제곱추정법(OLS)을 사용함
     $$\hat{y} = b_0 + b_1x$$
   + 잔차(residual) : 관측값과 예측값의 차이, $y-\hat{y}$
 
@@ -345,8 +346,8 @@ model.fit(X, y)
 
 # 7시간 공부했을 때, 시험 점수 예측
 newdata = pd.DataFrame({'study_time': [7]})
-predicted_score = model.predict(newdata)
-print(predicted_score)
+y_pred = model.predict(newdata)
+print(f'7시간 공부했을 때, 시험 점수 예측값 : {y_pred[0]}')
 ```
 
 <br>
@@ -585,7 +586,7 @@ df_train.describe()
 
 ```{python}
 # 산점도
-sns.pairplot(df_train, diag_kind='kde')
+sns.pairplot(df_train, height=2.5, diag_kind='kde')
 plt.show()
 ```
 
