--- a/3_3_classification.qmd
+++ b/3_3_classification.qmd
@@ -15,15 +15,16 @@ jupyter: python3
 + 혼동 행렬(confusion matrix)
 
 |구분|예측 <br>Positive|예측 <br>Negative|
-|-----------|----------------|----------------|
+|:------:|:------:|:------:|
 |**실제 Positive**|True Positive(TP)|False Negative(FN)|
 |**실제 Negative**|False Positive(FP)|True Negative(TN)|
 
 <br>
 
 + 분류모델 평가지표
+
 |지표|설명|
-|:------|:------------------------------|
+|:------:|:------------------------------|
 |정확도(accuracy)|전체 중에서 실제와 동일하게 예측한 비율, $\frac{TP + TN}{TP + TN + FP + FN}$|
 |정밀도(precision)|모델이 양성이라고 예측한 것 중에서 실제로 양성인 비율, $\frac{TP}{TP + FP}$|
 |재현율(recall, sensitivity)|실제 양성 중에서 모델이 양성이라고 예측한 비율, $\frac{TP}{TP + FN}$|
@@ -175,7 +176,7 @@ for genre in top_genres:
     total = genre_count[genre]
     above_count = len(df[mask])
     percent = above_count/total*100
-    print(f'{genre} 장르 영화 {total}편 중에서 평균 평점 {min_avg_rating} 이상인 영화 수 : {above_count}편 ({percent:.1f}%)')
+    print(f'{genre} : {total}편 중 평균 평점 {min_avg_rating} 이상 {above_count}편 ({percent:.1f}%)')
 ```
 
 <br>
@@ -195,7 +196,7 @@ X = df[['Action', 'Adventure', 'Fantasy', 'ScienceFiction', 'Crime', 'Drama', 'T
 y = df['target']
 
 from sklearn.model_selection import train_test_split
-X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42, stratify=y)
+X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, stratify=y)
 ```
 
 ```{python}
@@ -254,8 +255,8 @@ print(f'Action, Thriller 장르일 때, target 예측값 : {y_pred[0]:.0f}')
 + 정확도는 43.8%로, 전체 영화 중 약 절반 이하만 정답 클래스를 올바르게 분류함
 + 정밀도는 37.8%로, 재현율은 43.8%로, 전체 클래스에 대한 평균적인 분류 성능이 낮은 편임
 + 세 지표가 모두 낮게 나타났으며, 이는 입력 데이터로 사용한 장르 정보만으로는 target을 효과적으로 구분하기 어려운 것으로 판단됨
-+ 또한 target에서 클래스 불균형이 존재하여, 일부 클래스는 모델이 거의 예측하지 못했을 가능성도 있음
-+ 따라서 모델 성능 개선을 위해 감독, 배우, 개봉 연도, 제작 국가 등의 추가적인 특성을 포함할 필요가 있음
++ 또한 클래스 불균형이 존재하여, 일부 클래스는 모델이 거의 예측하지 못했을 가능성도 있음
++ 따라서 모델 성능 개선을 위해 감독, 배우, 개봉 연도 등의 추가적인 특성을 포함할 필요가 있음
 
 <br>
 
@@ -398,6 +399,6 @@ print(f'Rebounds 3회, Assists 3회, Steals 2회, Blocks 2회, Turnovers 4회일
 + 정확도는 66.4%로, 3명의 중 2명은 경력을 올바르게 분류함
 + 정밀도는 70.3%로, 모델이 경력 5년 이상이라고 예측한 선수 중 약 70%가 실제로 경력이 많았음
 + 재현율은 81.1%로, 실제로 경력 5년 이상인 선수 대부분을 모델이 정확히 분류함
-+ 모델 성능은 전반적으로 양호하며, 특히 높은 재현율을 통해 경력이 많은 선수를 잘 포착하는 경향을 보임
++ 모델 성능은 전반적으로 양호하며, 특히 높은 재현율을 통해 경력이 많은 선수를 잘 포착함
 + 다만 정확도와 정밀도는 개선 여지가 있으며, 이를 위해 득점, 평균 출전 시간, 포지션 등의 추가적인 특성을 고려해볼 수 있음
 
